--- a/.github/workflows/Execution.yml
+++ b/.github/workflows/Execution.yml
@@ -13,6 +13,10 @@ on:
         type: choice
         options:
           - "Android:Samsung Galaxy S22 Ultra:12.0"
+      app-url:
+        description: "bs://546e0ef1089348a188ab63698ac35b6788944f0f"
+        required: true
+        type: string
              
 env:
   BROWSER_STACK_USERNAME: anjanaprakash_hHWeNt
@@ -38,7 +42,7 @@ jobs:
         env:
           BROWSER_STACK_HUB_URL: "https://${{ env.BROWSER_STACK_USERNAME }}:${{ env.BROWSER_STACK_ACCESS_KEY }}@hub.browserstack.com/wd/hub"
           DEVICE_DETAILS: "Android:Samsung Galaxy S22 Ultra:12.0"
-          APP_URL: "bs://546e0ef1089348a188ab63698ac35b6788944f0f"
+          APP_URL: "${{ inputs.app-url }}"
 
       - name: Push test logs to artifacts
         uses: actions/upload-artifact@v3
