--- a/.github/workflows/Execution.yml
+++ b/.github/workflows/Execution.yml
@@ -36,9 +36,9 @@ jobs:
             java-version: "17"
             distribution: "temurin"
             cache: maven
-      - name: Run the presto tests
+      - name: Run the tests
         run: |
-          mvn -q test
+          mvn test -Dtestng.testng.config=${{ github.workspace }}/browserstack_reg.xml
         env:
           BROWSER_STACK_HUB_URL: "https://${{ env.BROWSER_STACK_USERNAME }}:${{ env.BROWSER_STACK_ACCESS_KEY }}@hub.browserstack.com/wd/hub"
           DEVICE_DETAILS: "Android:Samsung Galaxy S22 Ultra:12.0"
